move the footer-scroll logic to the footer component and remove it from the movie page. Make sure the footer is visible at the bottom of the page

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(17 24 39);
   color: white;
+  min-height: 100vh;
 }
 
 html, 
@@ -313,13 +314,18 @@ p {
 
  /* Footer */
  .footer-container {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  left: 0;
   width: 100%;
-  display: flex;
+  bottom: 0;
+  display: none;
   justify-content: space-between;
   align-items: center;
   padding: 10px 10px 10px 10px;
+ }
+
+ .footer-container.visible {
+  display: flex;
  }
 
  .footer-logo {
